--- a/.github/workflows/base-cleanup-prs.yml
+++ b/.github/workflows/base-cleanup-prs.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     types: [closed]
 
+permissions:
+  contents: write
 jobs:
   cleanup:
     runs-on: ubuntu-latest
@@ -28,7 +30,6 @@ jobs:
                   .addRaw("The PR branch was found and will be cleaned up.")
                   .write();
               } else {
-
                 core.setFailed("Branch not found, nothing to clean. (failure can be ignored)");
               }
             }
