fix branch name

--- a/.github/workflows/base-publish.yml
+++ b/.github/workflows/base-publish.yml
@@ -2,7 +2,7 @@ name: (kuberlr-base) Publish Images
 on:
   push:
     branches:
-      - 'master'
+      - 'main'
     paths:
       - 'base/versions.txt'
       - 'base/Dockerfile'
