--- a/.github/workflows/base-publish.yml
+++ b/.github/workflows/base-publish.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
-      - run: scripts/check-versions.sh
+      - run: scripts/check-kuberlr-versions.sh
   image-prebuild:
     needs:
       - validate-versions
