--- a/.github/workflows/base-find-new-versions.yml
+++ b/.github/workflows/base-find-new-versions.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
-      - name: Run add-new-versions.sh
+      - name: Run add-new-kuberlr-versions.sh
         id: run
         run: |
           bash scripts/add-new-versions.sh base/versions.txt > add-new-versions.output
