Adjust steps to be in builder

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -11,10 +11,11 @@ RUN set -x \
  && chmod +x ${ARCHIVE_NAME}/kuberlr \
  && mv ${ARCHIVE_NAME}/kuberlr /bin/kuberlr
 RUN useradd -u 1000 -U -m kuberlr
+RUN ln -s /bin/kuberlr /bin/kubectl
 
 FROM scratch
-COPY --from=build /bin/kuberlr /bin/kuberlr
-RUN ln -s /bin/kuberlr /bin/kubectl
+COPY --from=build /bin/kubectl /bin/kuberlr
+COPY --from=build /bin/kubectl /bin/kubectl
 COPY --from=build /etc/passwd /etc/passwd
 COPY --from=build /etc/group /etc/group
 USER kuberlr
