minimize the repo down to just "rancher-kuberlr" (eventually rancher/kuberlr)

--- a/.github/workflows/find-new-versions.yml
+++ b/.github/workflows/find-new-versions.yml
@@ -1,4 +1,4 @@
-name: (kuberlr-base) Check for new versions
+name: Check for new versions
 on:
   workflow_dispatch:
   schedule:
@@ -7,6 +7,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
+
 jobs:
   add-new-versions:
     runs-on: ubuntu-latest
@@ -16,7 +17,7 @@ jobs:
       - name: Run add-new-kuberlr-versions.sh
         id: run
         run: |
-          bash scripts/add-new-versions.sh base/versions.txt > add-new-versions.output
+          bash scripts/add-new-versions.sh package/versions.txt > add-new-versions.output
           if grep -q ^Added add-new-versions.output; then
             new_versions=$(grep ^Added add-new-versions.output)
             echo "new_versions=${new_versions}" >> $GITHUB_OUTPUT
