--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,12 @@
-name: (kuberlr-base) Publish Images
+name: Publish Images
 on:
   workflow_dispatch:
   push:
     branches:
       - 'main'
     paths:
-      - 'base/versions.txt'
-      - 'base/Dockerfile'
+      - 'package/versions.txt'
+      - 'package/Dockerfile'
 
 env:
   IMAGE_REPO: "mallardduck/rancher-kuberlr"
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
-      - run: scripts/check-kuberlr-versions.sh base/versions.txt
+      - run: scripts/check-kuberlr-versions.sh package/versions.txt
   image-prebuild:
     needs:
       - validate-versions
@@ -78,29 +78,29 @@ jobs:
         id: build-push
         with:
           context: .
-          file: base/Dockerfile
+          file: package/Dockerfile
           platforms: "linux/amd64,linux/arm64,linux/s390x"
           push: true
-          tags: ${{ env.IMAGE_REPO }}:base-${{ matrix.version }}
+          tags: ${{ env.IMAGE_REPO }}:${{ matrix.version }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             KUBERLR_RELEASE=${{ matrix.version }}
       - name: Get CPU Arch hashes
         run: |
-          docker manifest inspect ${{ env.IMAGE_REPO }}:base-${{ matrix.version }} | jq --raw-output '.manifests[]
+          docker manifest inspect ${{ env.IMAGE_REPO }}:${{ matrix.version }} | jq --raw-output '.manifests[]
             | select(.platform.architecture | IN("amd64", "arm64", "s390x"))
             | "IMAGE_\(.platform.architecture | ascii_upcase)=\(.digest)"' >> "$GITHUB_ENV"
       - name: Tag CPU Arch Images
         run: |
           echo "Re-tagging amd64 images"
           docker image pull ${{ env.IMAGE_REPO }}@${{ env.IMAGE_AMD64 }}
-          docker tag ${{ env.IMAGE_REPO }}@${{ env.IMAGE_AMD64 }} ${{ env.IMAGE_REPO }}:base-${{ matrix.version }}-amd64
-          docker push ${{ env.IMAGE_REPO }}:base-${{ matrix.version }}-amd64
+          docker tag ${{ env.IMAGE_REPO }}@${{ env.IMAGE_AMD64 }} ${{ env.IMAGE_REPO }}:${{ matrix.version }}-amd64
+          docker push ${{ env.IMAGE_REPO }}:${{ matrix.version }}-amd64
           echo "Re-tagging arm64 images"
           docker image pull ${{ env.IMAGE_REPO }}@${{ env.IMAGE_ARM64 }}
-          docker tag ${{ env.IMAGE_REPO }}@${{ env.IMAGE_ARM64 }} ${{ env.IMAGE_REPO }}:base-${{ matrix.version }}-arm64
-          docker push ${{ env.IMAGE_REPO }}:base-${{ matrix.version }}-arm64
+          docker tag ${{ env.IMAGE_REPO }}@${{ env.IMAGE_ARM64 }} ${{ env.IMAGE_REPO }}:${{ matrix.version }}-arm64
+          docker push ${{ env.IMAGE_REPO }}:${{ matrix.version }}-arm64
           echo "Re-tagging s390x images"
           docker image pull ${{ env.IMAGE_REPO }}@${{ env.IMAGE_S390X }}
-          docker tag ${{ env.IMAGE_REPO }}@${{ env.IMAGE_S390X }} ${{ env.IMAGE_REPO }}:base-${{ matrix.version }}-s390x
-          docker push ${{ env.IMAGE_REPO }}:base-${{ matrix.version }}-s390x
+          docker tag ${{ env.IMAGE_REPO }}@${{ env.IMAGE_S390X }} ${{ env.IMAGE_REPO }}:${{ matrix.version }}-s390x
+          docker push ${{ env.IMAGE_REPO }}:${{ matrix.version }}-s390x
