--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
-      - run: scripts/check-kuberlr-versions.sh package/versions.txt
+      - run: scripts/check-kuberlr-versions.sh versions.txt
